Implementado filtro de navegação

--- a/banco_de_ideias/WebContent/WEB-INF/modulos/button.xhtml
+++ b/banco_de_ideias/WebContent/WEB-INF/modulos/button.xhtml
@@ -8,7 +8,7 @@
 
 <ui:composition >
 		<h:form> 
-			  <h:link outcome="userform">
+			  <h:link outcome="/admin/userform">
 			  <img src="http://images.all-free-download.com/images/graphiclarge/button_add_89666.jpg" style="width: 5%"/>
 			  </h:link>
 			  
