--- a/banco_de_ideias/WebContent/admin/userlist.xhtml
+++ b/banco_de_ideias/WebContent/admin/userlist.xhtml
@@ -37,7 +37,8 @@
 				</h:column>
 			</h:dataTable>
 		</h:form>
-		<ui:include src="WEB-INF/modulos/button.xhtml"></ui:include>
+		
+		<ui:include src="/WEB-INF/modulos/button.xhtml"></ui:include>
 	</div>
 
 </ui:define>
