--- a/banco_de_ideias/WebContent/index.xhtml
+++ b/banco_de_ideias/WebContent/index.xhtml
@@ -4,5 +4,10 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="/WEB-INF/templates/template.xhtml">
+	
+		<h>Bem vindo!</h>
+		<ui:include src="/WEB-INF/modulos/login.xhtml" />
+	
+
 </ui:composition>
 </html>
